@startuml Database
entity VacancyEntity {
    +ID: int <<PK>>
    +Title: string
    +Description: string
    +EmployerID: int <<FK>>
    +AreaID: int <<FK>>
    +ScheduleID: int <<FK>>
    +ExperienceID: int <<FK>>
    +EmploymentID: int <<FK>>
    +ProfessionalRoleID: int <<FK>>
    --
    Table: "Vacacncies"
}

entity EmployerEntity {
    +ID: int <<PK>>
    +Name: string
    +Website: string
    --
    Table: "Employers"
}

entity AreaEntity {
    +ID: int <<PK>>
    +Name: string
    --
    Table: "AreaEntity"
}

entity ScheduleEntity {
    +ID: int <<PK>>
    +Name: string
    --
    Table: "Schedules"
}

entity ExperienceEntity {
    +ID: int <<PK>>
    +Name: string
    --
    Table: "Experiences"
}

entity EmploymentEntity {
    +ID: int <<PK>>
    +Name: string
    --
    Table: "Employments"
}

entity KeySkillEntity {
    +ID: string <<PK>>
    +Name: string
    --
    Table: "KeySkills"
}

entity VacancyKeySkillLinkEntity {
    +VacancyID: int <<PK>><<FK>>
    +KeySkillID: int <<PK>><<FK>>
    --
    Table: "KeySkillVacancyLinks"
}

entity ProfessionalRoleEntity {
    +ID: int <<PK>>
    +Name: string
    --
    Table: "ProfessionalRoles"
}

entity VacancyFullInfo {
    +VacancyID: int <<PK>><<FK>>
    +FullDescription: string
    --
    Table: "VacancyDetail"
}

VacancyEntity }|..|| EmployerEntity : "employer"
VacancyEntity }|..|| AreaEntity : "area"
VacancyEntity }|..|| ScheduleEntity : "schedule"
VacancyEntity }|..|| ExperienceEntity : "experience"
VacancyEntity }|..|| EmploymentEntity : "employment"
VacancyEntity }|..|| ProfessionalRoleEntity : "professionalRole"

VacancyKeySkillLinkEntity }|..|| VacancyEntity : "vacancy"
VacancyKeySkillLinkEntity }|..|| KeySkillEntity : "keySkill"

VacancyFullInfo }|..|| VacancyEntity : "vacancyFullInfo"

@enduml